--- a/public/raw-salary.html
+++ b/public/raw-salary.html
@@ -7,36 +7,28 @@
   <title>Raw Salary Ranges</title>
 </head>
 <body>
-  <canvas id="salarychart" width="400" height="400"></canvas>
+  <canvas id="salarychart" width="400" height="200"></canvas>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
-   <script>
+  <script>
     const salaryJSON = [{"salary":40000},{"salary":50000},{"salary":50000},{"salary":50000},{"salary":60000},{"salary":60000},{"salary":60000},{"salary":60000},{"salary":60000},{"salary":60000},{"salary":60000},{"salary":60000},{"salary":60000},{"salary":60000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":70000},{"salary":80000},{"salary":80000},{"salary":80000},{"salary":80000},{"salary":80000},{"salary":80000},{"salary":80000},{"salary":80000},{"salary":80000},{"salary":90000},{"salary":90000},{"salary":90000},{"salary":90000},{"salary":90000},{"salary":90000},{"salary":100000},{"salary":100000},{"salary":100000},{"salary":100000},{"salary":100000},{"salary":100000},{"salary":100000},{"salary":100000},{"salary":100000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":110000},{"salary":120000},{"salary":120000},{"salary":120000},{"salary":120000},{"salary":120000},{"salary":120000},{"salary":130000},{"salary":130000},{"salary":130000},{"salary":130000},{"salary":140000},{"salary":140000},{"salary":140000},{"salary":140000},{"salary":140000},{"salary":150000},{"salary":160000},{"salary":160000},{"salary":170000},{"salary":170000},{"salary":180000}]
 
-    console.log(salaryJSON)
+    const chartHTML = document.getElementById('salarychart')
 
-    var chartHTML = document.getElementById('salarychart')
-
-    var data = salaryJSON.map(salary => salary.salary)
+    const data = salaryJSON.map(salary => salary.salary)
     
-    console.log(data)
+    const frequency = []
 
-    var frequency = []
-
-    for ( var i = 0; i < data.length; i++ ) {
+    for (let i = 0; i < data.length; i++) {
       var prev
-        if ( data[i] !== prev ) {
-            frequency.push(1);
-        } else {
-            frequency[frequency.length-1]++;
-        }
-        prev = data[i];
+      if ( data[i] !== prev ) {
+        frequency.push(1);
+      } else {
+        frequency[frequency.length-1]++;
+      }
+      prev = data[i];
     }
 
-    console.log(frequency)
-
-    var labels = data.filter((value, index, self) => self.indexOf(value) === index)
-
-    console.log(labels)
+    const labels = data.filter((value, index, self) => self.indexOf(value) === index)
 
     function getRandomColor () {
       const r = (Math.floor(Math.random() * 156) + 90)
@@ -46,19 +38,15 @@
       return 'rgb(' + r + ',' + g + ',' + b + ')'
     }
 
-    var backgroundColor = labels.map(function (color) {
+    const backgroundColor = labels.map(function (color) {
       return getRandomColor()
     })
 
-    console.log(backgroundColor)
-
-    var borderColor = labels.map(function (color) {
+    const borderColor = labels.map(function (color) {
       return getRandomColor()
     })
 
-    console.log(borderColor)
-
-    var salarychart = new Chart(chartHTML, {
+    const salarychart = new Chart(chartHTML, {
       type: 'bar',
       data: {
         labels,
