Add links to both charts

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 <body>
   <ul>
     <li><a href="./lowbar.html">Low Bar</a></li>
+    <li><a href="./raw-salary.html">Salary Bar Chart</a></li>
+    <li><a href="./remote.html">Remote vs. Local Bar Chart</a></li>
   </ul>
 </body>
 
