--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <li><a href="./lowbar.html">Low Bar</a></li>
     <li><a href="./raw-salary.html">Salary Bar Chart</a></li>
     <li><a href="./remote.html">Remote vs. Local Bar Chart</a></li>
+    <li><a href="./gender.html">Salary by Gender Chart</a></li>
   </ul>
 </body>
 
